# Foundational packages

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

env_vars = use_repo_rule("//bazel/repo:env_vars.bzl", "env_vars")

# Environment values available for packaging.
env_vars(
    name = "agent_volatile",
    # Each variable needs a justification. Every time you use one, the
    # target using it is potentially uncachable.
    # ⚠️ Keep in sync with the `--repo_env=` entries in .bazelrc
    variables = [
        # This gets set by omnibus builds in many cases. It's used in the script
        # to set things like compression, so we'll mimic that for now.
        "DEPLOY_AGENT",
        # For some tests we want to run with higher compression, but
        # not break caching and rebuild the binaries.
        "FORCED_PACKAGE_COMPRESSION_LEVEL",
        # This is the build pipeline id, which is used in some symlink paths.
        "PACKAGE_VERSION",
        # macOS code signing: control whether to enable code signing
        "SIGN_MAC",
    ],
)

# Expose release.json for information about the current release.
release_json = use_repo_rule("//bazel/repo:release_json.bzl", "release_json")

release_json(name = "dd_release_json")

# Instead of the canonical rules_license, we use the version from supply-chain.
# This allows mixing both old and new license rules during the multi-year
# migration between the two styles. The rules_license overlay will never be
# available in the BCR, for obvious name confusion reasons, so we have to
# use an archive_override to pull the alternate reality from supply-chain.
bazel_dep(name = "rules_license", version = "1.0.0")

# We are temporarily using a development fork which is ahead of the release.
archive_override(
    module_name = "rules_license",
    sha256 = "d843315c777a0296a40c22e5189b576e9944f6f4b377fe438ebf6d1e21e794eb",
    strip_prefix = "supply-chain-dd_test/rules_license",
    urls = ["https://github.com/aiuto/supply-chain/archive/refs/tags/dd_test.tar.gz"],
)

bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "gawk", version = "5.3.2.bcr.7")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "gcc_toolchain", version = "0.9.2")
bazel_dep(name = "libarchive", version = "3.8.1.bcr.2")
bazel_dep(name = "package_metadata", version = "0.0.10")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "re.bzl", version = "0.3.1")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_flex", version = "0.4.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_m4", version = "0.3.bcr.1")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "rules_rs", version = "0.0.27")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_rust_prost", version = "0.69.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "supply_chain_tools", version = "0.0.1")
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

bazel_dep(name = "rules_testing", version = "0.9.0", dev_dependency = True)

# Temporary until rules_go > 0.60.0 with go.work support is in BCR
# To be reverted to the upstream repo when
# https://github.com/bazel-contrib/rules_go/pull/4586 gets merged
git_override(
    module_name = "rules_go",
    commit = "8808bb8c6604f1e7a2badbfcd9a9db4c32ba0a8c",  # main as of April 17, 2026
    patch_strip = 1,
    patches = [
        "//bazel/patches:rules_go-windows-symlink-workaround.patch",  # bazel-contrib/rules_go#3977
    ],
    remote = "https://github.com/bazel-contrib/rules_go.git",
)

# Temporary until rules_pkg > 1.2.0 is in BCR
git_override(
    module_name = "rules_pkg",
    commit = "401969d4367c42dcbb45d33a637eae87788d025e",  # main as of April 22, 2026
    remote = "https://github.com/bazelbuild/rules_pkg.git",
)

# Pinned past the 0.69.0 release to pick up the Windows-GNU ABI support from
# bazelbuild/rules_rust#3940 (lib name resolution, stdlib link flags, PDB
# emission split by abi). Required because our Windows cc_toolchain is MinGW
# (@winlibs_mingw64), and the 0.69.0 stable release still hard-codes MSVC
# behavior for `target_os == "windows"`.
git_override(
    module_name = "rules_rust",
    commit = "f31db8b6f124dd5eebdd0ed8de4daf20d4d9685f",  # main as of April 27, 2026 (includes #3940 + #3990)
    patch_strip = 1,
    patches = [
        # Derives `-Cdlltool=<linker-dir>/dlltool.exe` automatically
        "//bazel/patches:rules_rust-derive-dlltool-from-linker.patch",
    ],
    remote = "https://github.com/bazelbuild/rules_rust.git",
)

git_override(
    module_name = "rules_rust_prost",
    commit = "f31db8b6f124dd5eebdd0ed8de4daf20d4d9685f",
    remote = "https://github.com/bazelbuild/rules_rust.git",
    strip_prefix = "extensions/prost",
)

#########################
## Prebuilt binaries   ##
#########################

http_archive(
    name = "com_github_bazelbuild_buildtools",
    patch_strip = 1,
    patches = [
        "//bazel/patches:buildifier-build.patch",  # bazelbuild/buildtools#1398
        "//bazel/patches:buildifier-internal-factory.patch",  # bazelbuild/buildtools#1399
        "//bazel/patches:buildifier-runner-bat-template.patch",  # bazelbuild/buildtools#1400 bazelbuild/buildtools#1404
        "//bazel/patches:buildifier-runner-bash-template.patch",  # bazelbuild/buildtools#1454
    ],
    sha256 = "f3b800e9f6ca60bdef3709440f393348f7c18a29f30814288a7326285c80aab9",
    strip_prefix = "buildtools-8.5.1",
    type = "tar.gz",
    urls = [
        "https://codeload.github.com/bazelbuild/buildtools/tar.gz/refs/tags/v8.5.1",
        "https://github.com/bazelbuild/buildtools/archive/refs/tags/v8.5.1.tar.gz",
    ],
)

# Upstream Linux kernel syscall tables, used by
# //pkg/security/utils:utils_syscall_table to (re)generate
# pkg/security/utils/syscalls.go. Bumping the kernel version requires updating
# the URLs and sha256 of both files together.
http_file(
    name = "linux_v6_13_syscall_64_tbl",
    sha256 = "a25d490b97e98fa2ad7912f229555e1c8f0e5ba70960f508ae4c324b2439aa04",
    urls = ["https://raw.githubusercontent.com/torvalds/linux/v6.13/arch/x86/entry/syscalls/syscall_64.tbl"],
)

http_file(
    name = "linux_v6_13_unistd_h",
    sha256 = "53b1df8caee4a4c2ff37d0ec895e22663a0e61b188de61b98f025709ba6c8e18",
    urls = ["https://raw.githubusercontent.com/torvalds/linux/v6.13/include/uapi/asm-generic/unistd.h"],
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//bazel:prebuilt_buildtools.json")
multitool.hub(lockfile = "//bazel:prebuilt_jq.json")
use_repo(multitool, "multitool")

## Use local object file tools
find_system_otool = use_extension("//bazel/toolchains/otool:otool_configure.bzl", "find_system_otool", dev_dependency = True)
use_repo(find_system_otool, "otool")

register_toolchains(
    "@otool//:all",
    dev_dependency = True,
)

find_system_patchelf = use_extension("//bazel/toolchains/patchelf:patchelf_configure.bzl", "find_system_patchelf", dev_dependency = True)
use_repo(find_system_patchelf, "patchelf_toolchains")

register_toolchains(
    "@patchelf_toolchains//:all",
    dev_dependency = True,
)

find_rpmbuild = use_extension("@rules_pkg//toolchains/rpm:rpmbuild_configure.bzl", "find_system_rpmbuild_bzlmod", dev_dependency = True)
use_repo(find_rpmbuild, "rules_pkg_rpmbuild")

register_toolchains(
    "@rules_pkg_rpmbuild//:all",
    dev_dependency = True,
)

visual_studio = use_repo_rule("//bazel/rules:visual_studio.bzl", "visual_studio")

######################################
## LLVM BPF toolchain for eBPF    ##
####################################

llvm_bpf_ext = use_extension("//bazel/toolchains/llvm_bpf:llvm_bpf_configure.bzl", "llvm_bpf_extension")
llvm_bpf_ext.configure(
    clang_build_version = "v60409452-ee70de70",
    clang_version = "12.0.1",
    s3_base_url = "https://dd-agent-omnibus.s3.amazonaws.com/llvm",
    sha256s = {
        "clang.amd64": "2a4df4c49a57efb33ec4e51f87f837bc80f3a5874a5828384f265541a018394e",
        "clang.arm64": "5432ee1afc66453a457e756b025e4cace3aa56f687f595ac5d5bebcff00eac1b",
        "llc.amd64": "aa6ca65c28ac09f3ba1d22ccbda6a85d1414c6ed4491d8d758a08351cb66f86e",
        "llc.arm64": "08429823efd7d4ab6a247b195dabd0e8d8b43c50789704fd3a19947e71dd4776",
        "llvm-strip.amd64": "70a9edc44ccad32361f1c6ae619c3b98e5505d4b67f24b5996f55bf841ee5cbd",
        "llvm-strip.arm64": "1fd0cb6344d606d8c6fe6ea424fdfdd1cba1228f027dd3f08463c914bc47f67e",
    },
)
use_repo(llvm_bpf_ext, "llvm_bpf")

register_toolchains("@llvm_bpf//:llvm_bpf_toolchain")

## Linux kernel headers for eBPF prebuilt compilation
## Registers three repos: host auto-detect + explicit x86_64 + explicit aarch64
## for cross-compilation via --//bazel/rules/ebpf:target_arch=<arch>.
linux_headers_ext = use_extension("//bazel/toolchains/linux_headers:linux_headers.bzl", "linux_headers_extension")
use_repo(linux_headers_ext, "linux_headers", "linux_headers_aarch64", "linux_headers_x86_64")

######################################
## Compilers and toolchains        ##
####################################

git_override(
    module_name = "gcc_toolchain",
    commit = "cd3e7ee1027a3ecc8b89dc61eb485299ed833399",
    patch_args = ["-p1"],
    patches = [
        "//bazel/patches:gcc-toolchain/0001-adapt-to-our-ctng-toolchain.patch",
        "//bazel/patches:gcc-toolchain/0002-fix-c-x86_64-header-locations-with-our-ctng-toolchai.patch",
        "//bazel/patches:gcc-toolchain/0003-add-nostdinc-to-asmflags.patch",
        "//bazel/patches:gcc-toolchain/0005-fix-bazel-9-compat.patch",
    ],
    remote = "https://github.com/f0rmiga/gcc-toolchain.git",
)

gcc_toolchains = use_extension("@gcc_toolchain//toolchain:module_extensions.bzl", "gcc_toolchains", dev_dependency = True)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_x86_64",
    binary_prefix = "x86_64-unknown-linux-gnu-",
    enable_fortran = False,
    extra_ldflags = ["-Wl,--build-id=sha1"],
    gcc_version = "11.4.0",
    target_arch = "x86_64",
)
gcc_toolchains.toolchain(
    name = "gcc_toolchain_aarch64",
    binary_prefix = "aarch64-unknown-linux-gnu-",
    enable_fortran = False,
    extra_ldflags = ["-Wl,--build-id=sha1"],
    gcc_version = "12.3.0",
    target_arch = "aarch64",
)
use_repo(gcc_toolchains, "gcc_toolchain_x86_64")
use_repo(gcc_toolchains, "gcc_toolchain_aarch64")

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

sysroot(
    name = "macos_sdk",
    sha256 = "c15cf0f3f17d714d1aa5a642da8e118db53d79429eb015771ba816aa7c6c1cbd",
    strip_components = 1,
    url = "https://github.com/joseluisq/macosx-sdks/releases/download/15.5/MacOSX15.5.sdk.tar.xz",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
use_repo(
    llvm,
    "llvm_toolchain",
    # This gives us a reference to call individual tools directly
    "llvm_toolchain_llvm",
)

# buildifier: leave-alone
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@macos_sdk//sysroot",
    targets = [
        "darwin-aarch64",
        "darwin-x86_64",
    ],
)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.7",  # https://github.com/bazel-contrib/toolchains_llvm/blob/master/toolchain/internal/llvm_distributions.bzl
)

# Hermetic MinGW-w64 toolchain sourced from a pinned WinLibs distribution.
# Variant: GCC 14.2.0 + MinGW-w64 12.0.0, POSIX threads, MSVCRT runtime,
# no LLVM bundle. URL, sha256 and gcc_version must move together when bumping.
winlibs_mingw_repository = use_repo_rule(
    "//bazel/toolchains/mingw:winlibs.bzl",
    "winlibs_mingw_repository",
)

winlibs_mingw_repository(
    name = "winlibs_mingw64",
    gcc_version = "14.2.0",
    sha256 = "ff475e985a98c5f3785129baf7460db14fee27708bce35f2833db5009507f1b9",
    url = "https://github.com/brechtsanders/winlibs_mingw/releases/download/14.2.0posix-19.1.7-12.0.0-msvcrt-r3/winlibs-x86_64-posix-seh-gcc-14.2.0-mingw-w64msvcrt-12.0.0-r3.zip",
)

# Hermetic MSYS2 sh_toolchain sourced from a pinned MSYS2 base archive.
# Replaces the previous --shell_executable=C:/tools/msys64/usr/bin/bash.exe
# pointer in .bazelrc so Windows shell actions no longer depend on a system
# MSYS2 install. Contains the `base` package only: bash + coreutils + sed +
# gawk + grep + tar + xz + msys-2.0.dll runtime. No make/perl/autotools yet;
# rules_foreign_cc workloads (openssl, krb5, ...) still need those overlaid
# in a follow-up.
msys2_base_repository = use_repo_rule(
    "//bazel/toolchains/msys2:msys2.bzl",
    "msys2_base_repository",
)

msys2_base_repository(
    name = "msys2_base",
    # Curated overlay of pacman packages from https://repo.msys2.org/msys/x86_64/.
    # Together they satisfy rules_foreign_cc's preinstalled_{make,m4,autoconf,
    # automake,pkgconfig}_toolchain lookups (see deps/repos.MODULE.bazel) plus
    # the perl interpreter that openssl's Configure script needs, and the
    # libiconv import lib that any glib/gettext-style configure scripts probe
    # for. Pinned URL+SHA256 for supply-chain integrity; bumping a package is
    # a single-line change here.
    overlay_packages = {
        "make": [
            "https://repo.msys2.org/msys/x86_64/make-4.4.1-2-x86_64.pkg.tar.zst",
            "2408af61717dae87b00c855b132769a125c708907fc94a46bb16dae076113e5c",
        ],
        "m4": [
            "https://repo.msys2.org/msys/x86_64/m4-1.4.21-1-x86_64.pkg.tar.zst",
            "b561e8871c7599502d9fae7196ee965b3fed3d7af09154eb8d2f5e4d9e5e5106",
        ],
        "libtool": [
            "https://repo.msys2.org/msys/x86_64/libtool-2.5.4-4-x86_64.pkg.tar.zst",
            "c8e812a9a32dd86c53d6e9bd5ec94977a5fc66d2ce3e691d92196aa06f616775",
        ],
        # pkgconf ships pkg-config.exe as a co-installed copy of pkgconf.exe
        # (drop-in CLI compatible). Preferred over the legacy pkg-config
        # package, which is no longer in the MSYS2 repo.
        "pkgconf": [
            "https://repo.msys2.org/msys/x86_64/pkgconf-2.5.1-1-x86_64.pkg.tar.zst",
            "38efd4928ac0cb06e9bd558baa533fc923c0592115bf9bd44970250f3ae2cb7e",
        ],
        # MSYS2 splits autoconf/automake into a version-selecting wrapper
        # (autoconf, automake, aclocal, ...) and per-series implementations.
        # We ship one current series of each — bump these two together.
        "autoconf-wrapper": [
            "https://repo.msys2.org/msys/x86_64/autoconf-wrapper-20260320-1-any.pkg.tar.zst",
            "84c1f93d4450b3bf1ef567110b51c15ffb3f13670d656cc48fea70a01371b20c",
        ],
        "autoconf2.72": [
            "https://repo.msys2.org/msys/x86_64/autoconf2.72-2.72-4-any.pkg.tar.zst",
            "65b3a37edf8bb4221d38db910ce1acc1ed879c7bcba33faa058066d06d35e7b0",
        ],
        "automake-wrapper": [
            "https://repo.msys2.org/msys/x86_64/automake-wrapper-20260320-1-any.pkg.tar.zst",
            "693817c288c81bb9f94ac92e5b6f914402735b80bb33e326ccddd7c89cc6a719",
        ],
        "automake1.18": [
            "https://repo.msys2.org/msys/x86_64/automake1.18-1.18.1-1-any.pkg.tar.zst",
            "c045d9eddf900dbacae06d9e0e19e250cc32d849def7d06b833253f85e3fc941",
        ],
        # `-devel` ships iconv.h + libiconv.dll.a needed by glib/gettext/krb5
        # configure scripts; the runtime msys-iconv-2.dll is already in base.
        "libiconv-devel": [
            "https://repo.msys2.org/msys/x86_64/libiconv-devel-1.19-1-x86_64.pkg.tar.zst",
            "b4836f02199a2ae02d5a836d5a6dc4a174a055da79c30e256635e638b52e2c5d",
        ],
        # perl is openssl's `Configure` runtime; libcrypt + libxcrypt are
        # perl's link-time crypto deps (older + newer ABI both present so we
        # don't have to track which one MSYS2's perl build linked against).
        "perl": [
            "https://repo.msys2.org/msys/x86_64/perl-5.42.2-1-x86_64.pkg.tar.zst",
            "7c96ef91b7395c12cfbd967ebf7daa8d3f950d1c0be23bb1dc2a635c95a07c01",
        ],
        "libcrypt": [
            "https://repo.msys2.org/msys/x86_64/libcrypt-2.1-5-x86_64.pkg.tar.zst",
            "3e7822d392eed281cd6019b80078ab201eefa7c83fff2d5bab0491b01088f674",
        ],
        "libxcrypt": [
            "https://repo.msys2.org/msys/x86_64/libxcrypt-4.5.2-1-x86_64.pkg.tar.zst",
            "e63db0aa2b708359e25f61f506e2d2c92c315febf5f88cc9f386e4ec0bdf4fa5",
        ],
    },
    sha256 = "7a3e5c0a728ebefd24dca6da179fe569dc98d6c7d20ce80981d8dc33fb15f7fc",
    url = "https://repo.msys2.org/distrib/x86_64/msys2-base-x86_64-20260322.tar.zst",
    version = "20260322",
)

# TODO{agent-build}: Find a way to register platform-specific toolchains dynamically
register_toolchains(
    "@gcc_toolchain_x86_64//:cc_toolchain",
    "@gcc_toolchain_aarch64//:cc_toolchain",
    "@winlibs_mingw64//:mingw_cc_toolchain",
    "@msys2_base//:sh_toolchain",
    "@llvm_toolchain//:all",  # last to avoid taking precedence over GCC toolchains
)

# Visual Studio / MSBuild tooling, taken from the local installation
visual_studio(
    name = "visual_studio",
    path_variable = "VSTUDIO_ROOT",
    version = "17.14.36717.8",  # 18.4.11612.150
)

# =========================================
# Python dependencies
# =========================================

# Keep in sync with .python-version
PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = PYTHON_VERSION)
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python, "python_" + PYTHON_VERSION.replace(".", "_"), "pythons_hub")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Development requirements. These are the tools needed to build the agent.
# TODO: Make a distinct set for modules we redistribute with the agent.
pip.parse(
    hub_name = "py_dev_requirements",
    python_version = PYTHON_VERSION,
    requirements_lock = "//deps:py_dev_requirements_lock.txt",
)
use_repo(pip, "py_dev_requirements")

register_toolchains("@pythons_hub//:all")

#######################
## Rust dependencies ##
#######################

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")

# Register a GNU-ABI Rust toolchain for Windows so that rustc generates
# GNU-style linker flags (-lkernel32, -o, etc.) compatible with the MinGW
rust.repository_set(
    name = "rust_windows_gnu_x86_64",
    edition = "2024",
    exec_triple = "x86_64-pc-windows-gnu",
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    target_triple = "x86_64-pc-windows-gnu",
    versions = ["1.92.0"],
)
rust.toolchain(
    edition = "2024",
    versions = ["1.92.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

register_toolchains("//bazel/toolchains/prost:prost_toolchain")

include("//deps:crates.MODULE.bazel")

#########################
## Native dependencies ##
#########################

# Make our 3rd parties depencency repositories known
# bazel mod tidy command adds a new line between includes.
# buildifier eliminates them. If we treat mod tidy as a code formatter
# for MODULE.bazel, we need to leave-alone the includes so that buildifier
# doesn't fail nor re-format them.
# buildifier: leave-alone
include("//deps:repos.MODULE.bazel")

# buildifier: leave-alone
include("//deps/acl:acl.MODULE.bazel")

# buildifier: leave-alone
include("//deps/cacerts:cacerts.MODULE.bazel")

# buildifier: leave-alone
include("//deps/compile_policy:compile_policy.MODULE.bazel")

# buildifier: leave-alone
include("//deps/cpython:cpython.MODULE.bazel")

# buildifier: leave-alone
include("//deps/curl:curl.MODULE.bazel")

# buildifier: leave-alone
include("//deps/freetds:freetds.MODULE.bazel")

# buildifier: leave-alone
include("//deps/gstatus:gstatus.MODULE.bazel")

# buildifier: leave-alone
include("//deps/jmxfetch:jmxfetch.MODULE.bazel")

# buildifier: leave-alone
include("//deps/nfsiostat:nfsiostat.MODULE.bazel")

# buildifier: leave-alone
include("//deps/openscap:openscap.MODULE.bazel")

# buildifier: leave-alone
include("//deps/libpcap:libpcap.MODULE.bazel")

# buildifier: leave-alone
include("//deps/security_agent_policies:security_agent_policies.MODULE.bazel")

# buildifier: leave-alone
include("//deps/setuptools:setuptools.MODULE.bazel")

# buildifier: leave-alone
include("//deps/snmp_traps:snmp_traps.MODULE.bazel")

# buildifier: leave-alone
include("//deps/windows:drivers.MODULE.bazel")

# buildifier: leave-alone
include("//deps/msodbcsql18:msodbcsql18.MODULE.bazel")

# buildifier: leave-alone
include("//deps:go.MODULE.bazel")

# This enables cross-compilation for macOS x86_64 on Apple Silicon.
# Simply add --platforms=@apple_support//platforms:macos_x86_64
# to the build command to enable it.
bazel_dep(name = "apple_support", version = "2.5.4")

use_extension("//bazel/tools:bazelisk_check.bzl", "bazelisk_check")

###########################################################################
## Hybrid build. Capture binaries built with dda (or whatever) as if they
## were built as bazel targets.
###########################################################################

prebuilt_file = use_repo_rule("//bazel/repo:prebuilt_file.bzl", "prebuilt_file")

prebuilt_file(
    name = "agent_binary",
    target_label = "@@//:bin/agent/agent",
    target_name = "agent",
)

prebuilt_file(
    name = "installer_binary",
    target_label = "@@//:bin/installer/installer",
    target_name = "installer",
)

prebuilt_file(
    name = "privateactionrunner_binary",
    target_label = "@@//:bin/privateactionrunner/privateactionrunner",
    target_name = "privateactionrunner",
)

prebuilt_file(
    name = "process_agent_binary",
    target_label = "@@//:bin/process-agent/process-agent",
    target_name = "process_agent",
)

prebuilt_file(
    name = "trace_agent_binary",
    target_label = "@@//:bin/trace-agent/trace-agent",
    target_name = "trace_agent",
)

prebuilt_file(
    name = "trace_loader_binary",
    target_label = "@@//:bin/trace-loader/trace-loader",
    target_name = "trace_loader",
)
