ignore_directories([
    "**/build",  # avoid BUILD/build mess: https://github.com/docker/desktop-feedback/issues/251
    ".*",  # hidden root directories: .cache, .claude, .cursor, .dda, .github, .gitlab, etc.
    "bazel-*",  # bazel convenience symlinks: suddenly caused issues inside arm64 Linux containers
    "target",  # cargo build creates it where Cargo.toml lives
])
