# gazelle:exclude agent
# gazelle:exclude cluster-agent
# gazelle:exclude cluster-agent-cloudfoundry
# gazelle:exclude dogstatsd
# gazelle:exclude host-profiler
# gazelle:exclude installer
# gazelle:exclude internal
# gazelle:exclude iot-agent
# gazelle:exclude loader
# gazelle:exclude otel-agent
# gazelle:exclude privateactionrunner
# gazelle:exclude process-agent
# gazelle:exclude sbomgen
# gazelle:exclude secrethelper
# gazelle:exclude security-agent
# gazelle:exclude serverless-init
# gazelle:exclude systray
# gazelle:exclude testdata
# gazelle:exclude trace-agent
